--- a/dashboard.css
+++ b/dashboard.css
@@ -109,8 +109,8 @@ aside .top{
   margin-top:1.4rem;
 }
 aside .logo img{
-  width: 2rem;
-  height: 5rem;
+  width: 500px;
+  height: 500px;
   
 }
 aside .logo{ 
@@ -131,7 +131,7 @@ aside .sidebar{
   background: rgb(255, 255, 255);
   display:flex;
   flex-direction: column;
-  height: 100px;
+  height: 90px;
   position: relative;
   top: 3rem;
 }
@@ -177,6 +177,7 @@ aside .sidebar a:hover span{
   margin-left: calc(1rem - 3px);
 }
 aside .sidebar .message-count{
+  
   background: var(--color-danger);
   color: var(--color-white);
   padding: 2px 10px;
@@ -185,11 +186,21 @@ aside .sidebar .message-count{
 }
 .graph{
 position: absolute;
-left: 15%;
+left: 150px;
 top: 40%;
+width: 60%;
 
 }
+.marks{
+  position: relative;
+  width: 53%;
+  height:200px;
+  background-color:var(--color-light);
+  margin-left: 15%;
+  bottom: 190%;
+ 
 
+}
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -208,21 +219,23 @@ top: 40%;
 
 .notice{
   position: relative;
-  width: 600px;
-  height:300px;
+  width: 30%;
+  height:260px;
   background-color:var(--color-light);
-  margin-left: 80%;
+  margin-left: 70%;
   bottom: 95%;
+  overflow: scroll;
 }
 
 .notice1{
   position: relative;
-  width: 600px;
-  height:260px;
+  width: 30%;
+  height:270px;
   background-color:var(--color-light);
   border-radius:var(--border-radius-1) ;
-  margin-left: 80%;
-  bottom: 85%;
+  margin-left: 70%;
+  bottom: 90%;
+  overflow: scroll;
 }
 .material-symbols-rounded {
   font-variation-settings:
